<resources>
    <string name="app_name">LearingRealmAndRetrofit</string>
    <string name="app_name_title">Word Notes</string>
    <string name="email_hint">E-mail address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="list">List</string>
    <string name="card">Card</string>
    <string name="list_deletion">List deletion</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_list_with_cards">Delete list with cards</string>
    <string name="network_error_message">Please check your internet connection</string>
    <string name="connection_issues">Oops an error occurred, please try again later.</string>
    <string name="code_error_message">Error code: %1$d</string>
    <string name="card_deletion">Card deletion</string>
    <string name="delete_card">Delete card</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="entry">entry</string>
    <string name="update_card">Update card</string>
    <string name="settings">Settings</string>
    <string name="invalid_email">Invalid email, check the email entry</string>
    <string name="password_not_match">Password does not match please try again</string>
    <string name="password_have_space">Password must not have a space</string>
    <string name="password_minimum_8">Password minimum length 8 symbol</string>
    <string name="empty_password">You did not enter a password</string>
    <string name="my_null">null</string>
    <string name="problem_realm">Oops problem database</string>
    <string name="empty_title">You did not enter a title</string>
    <string name="empty_fields">Fields must not be empty</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="example">Example</string>
    <string name="delete_this_card">Delete this card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_or_update_title">Save or update title</string>
    <string name="save_or_update_card">Save or update card</string>
    <string name="title">Title</string>
    <string name="select_lists">Select Lists</string>
    <string name="lists">Lists</string>
    <string name="deck">Deck</string>

</resources>
