<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deckDeleteDialogLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleListDeletion"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/list_deletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDeleteList"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/delete_list"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDeleteListWithCards"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/delete_list_with_cards"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <include
        android:id="@+id/containerSpinner"
        layout="@layout/progress_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
