<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/word"
            android:padding="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translation"
            android:padding="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/translationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutExamples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example"
            android:padding="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examplesId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lists"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonChangeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="TODO"
        android:src="@drawable/ic_rename"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
